--- a/app/components/styles.module.css
+++ b/app/components/styles.module.css
@@ -58,7 +58,7 @@
 .mobileNav {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 4;
 }
 .headerNavMobile {
   height: 100px;
@@ -87,7 +87,7 @@
   display: flex;
   height: 15px;
   align-items: center;
-  z-index: 3;
+  z-index: 5;
 }
 .hamburger {
   position: relative;
@@ -162,7 +162,7 @@
   background-position: 0 calc(100% - 0.1em);
 }
 .navModal {
-  z-index: 2;
+  z-index: 7;
   visibility: hidden;
   opacity: 0;
   pointer-events: auto;
